# sirepo

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CONDUCT.md  README.md  args_to_fld.json  calculate_run_time.py  container-runner-requirements.txt  install-new-landing.sh  karma-conf.js  karma.conf.js  package.json  protractor-conf.js  pyproject.toml  readthedocs.yml  requirements.txt  rtfd_requirements.txt  s.py  setup.py  test-with-docker.sh  test.sh  travis.sh  tsconfig.json  update_y_vals.py  x.py  x.sh  xtest.py
container-conf/: README.md  build.sh  radia-run-sirepo.sh  radia-run.sh  rpms.txt
docs/: .gitignore  index.rst
etc/: .gitignore  build-nsls2.sh  cori-sirepo-update.sh  home-env-funcs.sh  jshint.conf  jupyterhub-docker.tgz  karma-conf.js  madx_device_server.py  nginx-dev.conf  run-auth-basic.sh  run-auth-bluesky.sh  run-auth-email.sh  run-auth-ldap.sh  run-auth-moderate.sh  run-auth-react.sh  run-flash.sh  run-jupyterhub.sh  run-raydata.sh  run-react-build.sh  run-react.sh  run-server.sh  run-supervisor.sh  run.sh  setup-ldap.sh  temp-ldap-setup.sh  template-literals.sh  travis.sh
misc/: dedup.sh  expunge.sh
react/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
sirepo/: API_class_script.py  __init__.py  agent_supervisor_api.py  api.py  api_auth.py  api_perm.py  auth_api.py  auth_db.py  auth_role.py  auth_role_moderation.py  base_pkconfig.py  beaker_compat.py  bluesky.py  celery_tasks.py  codes.py  comsol_register.py  const.py  cookie.py  cron.py  crystal.py  csv.py  db_upgrade.py  default_parameters.py  email_auth.py  events.py  exporter.py  feature_config.py  file_lock.py  flask.py  foo  github_srunit.py  html.py  http_reply.py  http_request.py  http_util.py  hundli_console.py  importer.py  job.py  job_agent_process.py  (+57 more)
(+2259 files in other folders)
